	PR tree-optimization/17454 	* tree.c (tree_size): Add case for TREE_BINFO. 	* fold-const.c (fold_checksum_tree): Only clear the overloaded 	field TYPE_CACHED_VALUES if TYPE_CACHED_VALUES_P is set.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96548 138bc75d-0d04-0410-961f-82ee72b054a4